frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: front-svc
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 5173
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: front-pod
      labels:
        app: frontend
    spec:
      containers:
      - name: front-con
        image: 261595668962.dkr.ecr.ap-northeast-2.amazonaws.com/frontend:2
