fb-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fb-ingress
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-target-type: "ip"
  labels:
    app: frontend
spec:
  ingressClassName: nlb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
